cmake_minimum_required(VERSION 3.12)
project(OpenGL)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/glm)
include_directories(include/glm/detail)
include_directories(include/glm/gtc)
include_directories(include/glm/gtx)
include_directories(include/src)
include_directories(OpenGL)
include_directories(OpenGL/common)
include_directories(soil/include)
include_directories(soil/include/SOIL)

add_executable(OpenGL
        include/glm/detail/_features.hpp
        include/glm/detail/_fixes.hpp
        include/glm/detail/_noise.hpp
        include/glm/detail/_swizzle.hpp
        include/glm/detail/_swizzle_func.hpp
        include/glm/detail/_vectorize.hpp
        include/glm/detail/dummy.cpp
        include/glm/detail/func_common.hpp
        include/glm/detail/func_common.inl
        include/glm/detail/func_exponential.hpp
        include/glm/detail/func_exponential.inl
        include/glm/detail/func_geometric.hpp
        include/glm/detail/func_geometric.inl
        include/glm/detail/func_integer.hpp
        include/glm/detail/func_integer.inl
        include/glm/detail/func_matrix.hpp
        include/glm/detail/func_matrix.inl
        include/glm/detail/func_noise.hpp
        include/glm/detail/func_noise.inl
        include/glm/detail/func_packing.hpp
        include/glm/detail/func_packing.inl
        include/glm/detail/func_trigonometric.hpp
        include/glm/detail/func_trigonometric.inl
        include/glm/detail/func_vector_relational.hpp
        include/glm/detail/func_vector_relational.inl
        include/glm/detail/glm.cpp
        include/glm/detail/intrinsic_common.hpp
        include/glm/detail/intrinsic_common.inl
        include/glm/detail/intrinsic_exponential.hpp
        include/glm/detail/intrinsic_exponential.inl
        include/glm/detail/intrinsic_geometric.hpp
        include/glm/detail/intrinsic_geometric.inl
        include/glm/detail/intrinsic_integer.hpp
        include/glm/detail/intrinsic_integer.inl
        include/glm/detail/intrinsic_matrix.hpp
        include/glm/detail/intrinsic_matrix.inl
        include/glm/detail/intrinsic_trigonometric.hpp
        include/glm/detail/intrinsic_trigonometric.inl
        include/glm/detail/intrinsic_vector_relational.hpp
        include/glm/detail/intrinsic_vector_relational.inl
        include/glm/detail/precision.hpp
        include/glm/detail/setup.hpp
        include/glm/detail/type_float.hpp
        include/glm/detail/type_gentype.hpp
        include/glm/detail/type_gentype.inl
        include/glm/detail/type_half.hpp
        include/glm/detail/type_half.inl
        include/glm/detail/type_int.hpp
        include/glm/detail/type_mat.hpp
        include/glm/detail/type_mat.inl
        include/glm/detail/type_mat2x2.hpp
        include/glm/detail/type_mat2x2.inl
        include/glm/detail/type_mat2x3.hpp
        include/glm/detail/type_mat2x3.inl
        include/glm/detail/type_mat2x4.hpp
        include/glm/detail/type_mat2x4.inl
        include/glm/detail/type_mat3x2.hpp
        include/glm/detail/type_mat3x2.inl
        include/glm/detail/type_mat3x3.hpp
        include/glm/detail/type_mat3x3.inl
        include/glm/detail/type_mat3x4.hpp
        include/glm/detail/type_mat3x4.inl
        include/glm/detail/type_mat4x2.hpp
        include/glm/detail/type_mat4x2.inl
        include/glm/detail/type_mat4x3.hpp
        include/glm/detail/type_mat4x3.inl
        include/glm/detail/type_mat4x4.hpp
        include/glm/detail/type_mat4x4.inl
        include/glm/detail/type_vec.hpp
        include/glm/detail/type_vec.inl
        include/glm/detail/type_vec1.hpp
        include/glm/detail/type_vec1.inl
        include/glm/detail/type_vec2.hpp
        include/glm/detail/type_vec2.inl
        include/glm/detail/type_vec3.hpp
        include/glm/detail/type_vec3.inl
        include/glm/detail/type_vec4.hpp
        include/glm/detail/type_vec4.inl
        include/glm/detail/type_vec4_avx.inl
        include/glm/detail/type_vec4_avx2.inl
        include/glm/detail/type_vec4_sse2.inl
        include/glm/gtc/bitfield.hpp
        include/glm/gtc/bitfield.inl
        include/glm/gtc/constants.hpp
        include/glm/gtc/constants.inl
        include/glm/gtc/epsilon.hpp
        include/glm/gtc/epsilon.inl
        include/glm/gtc/integer.hpp
        include/glm/gtc/integer.inl
        include/glm/gtc/matrix_access.hpp
        include/glm/gtc/matrix_access.inl
        include/glm/gtc/matrix_integer.hpp
        include/glm/gtc/matrix_inverse.hpp
        include/glm/gtc/matrix_inverse.inl
        include/glm/gtc/matrix_transform.hpp
        include/glm/gtc/matrix_transform.inl
        include/glm/gtc/noise.hpp
        include/glm/gtc/noise.inl
        include/glm/gtc/packing.hpp
        include/glm/gtc/packing.inl
        include/glm/gtc/quaternion.hpp
        include/glm/gtc/quaternion.inl
        include/glm/gtc/random.hpp
        include/glm/gtc/random.inl
        include/glm/gtc/reciprocal.hpp
        include/glm/gtc/reciprocal.inl
        include/glm/gtc/round.hpp
        include/glm/gtc/round.inl
        include/glm/gtc/type_precision.hpp
        include/glm/gtc/type_precision.inl
        include/glm/gtc/type_ptr.hpp
        include/glm/gtc/type_ptr.inl
        include/glm/gtc/ulp.hpp
        include/glm/gtc/ulp.inl
        include/glm/gtc/vec1.hpp
        include/glm/gtc/vec1.inl
        include/glm/gtx/associated_min_max.hpp
        include/glm/gtx/associated_min_max.inl
        include/glm/gtx/bit.hpp
        include/glm/gtx/bit.inl
        include/glm/gtx/closest_point.hpp
        include/glm/gtx/closest_point.inl
        include/glm/gtx/color_space.hpp
        include/glm/gtx/color_space.inl
        include/glm/gtx/color_space_YCoCg.hpp
        include/glm/gtx/color_space_YCoCg.inl
        include/glm/gtx/common.hpp
        include/glm/gtx/common.inl
        include/glm/gtx/compatibility.hpp
        include/glm/gtx/compatibility.inl
        include/glm/gtx/component_wise.hpp
        include/glm/gtx/component_wise.inl
        include/glm/gtx/dual_quaternion.hpp
        include/glm/gtx/dual_quaternion.inl
        include/glm/gtx/euler_angles.hpp
        include/glm/gtx/euler_angles.inl
        include/glm/gtx/extend.hpp
        include/glm/gtx/extend.inl
        include/glm/gtx/extented_min_max.hpp
        include/glm/gtx/extented_min_max.inl
        include/glm/gtx/fast_exponential.hpp
        include/glm/gtx/fast_exponential.inl
        include/glm/gtx/fast_square_root.hpp
        include/glm/gtx/fast_square_root.inl
        include/glm/gtx/fast_trigonometry.hpp
        include/glm/gtx/fast_trigonometry.inl
        include/glm/gtx/gradient_paint.hpp
        include/glm/gtx/gradient_paint.inl
        include/glm/gtx/handed_coordinate_space.hpp
        include/glm/gtx/handed_coordinate_space.inl
        include/glm/gtx/integer.hpp
        include/glm/gtx/integer.inl
        include/glm/gtx/intersect.hpp
        include/glm/gtx/intersect.inl
        include/glm/gtx/io.hpp
        include/glm/gtx/io.inl
        include/glm/gtx/log_base.hpp
        include/glm/gtx/log_base.inl
        include/glm/gtx/matrix_cross_product.hpp
        include/glm/gtx/matrix_cross_product.inl
        include/glm/gtx/matrix_decompose.hpp
        include/glm/gtx/matrix_decompose.inl
        include/glm/gtx/matrix_interpolation.hpp
        include/glm/gtx/matrix_interpolation.inl
        include/glm/gtx/matrix_major_storage.hpp
        include/glm/gtx/matrix_major_storage.inl
        include/glm/gtx/matrix_operation.hpp
        include/glm/gtx/matrix_operation.inl
        include/glm/gtx/matrix_query.hpp
        include/glm/gtx/matrix_query.inl
        include/glm/gtx/matrix_transform_2d.hpp
        include/glm/gtx/matrix_transform_2d.inl
        include/glm/gtx/mixed_product.hpp
        include/glm/gtx/mixed_product.inl
        include/glm/gtx/multiple.hpp
        include/glm/gtx/multiple.inl
        include/glm/gtx/norm.hpp
        include/glm/gtx/norm.inl
        include/glm/gtx/normal.hpp
        include/glm/gtx/normal.inl
        include/glm/gtx/normalize_dot.hpp
        include/glm/gtx/normalize_dot.inl
        include/glm/gtx/number_precision.hpp
        include/glm/gtx/number_precision.inl
        include/glm/gtx/optimum_pow.hpp
        include/glm/gtx/optimum_pow.inl
        include/glm/gtx/orthonormalize.hpp
        include/glm/gtx/orthonormalize.inl
        include/glm/gtx/perpendicular.hpp
        include/glm/gtx/perpendicular.inl
        include/glm/gtx/polar_coordinates.hpp
        include/glm/gtx/polar_coordinates.inl
        include/glm/gtx/projection.hpp
        include/glm/gtx/projection.inl
        include/glm/gtx/quaternion.hpp
        include/glm/gtx/quaternion.inl
        include/glm/gtx/range.hpp
        include/glm/gtx/raw_data.hpp
        include/glm/gtx/raw_data.inl
        include/glm/gtx/rotate_normalized_axis.hpp
        include/glm/gtx/rotate_normalized_axis.inl
        include/glm/gtx/rotate_vector.hpp
        include/glm/gtx/rotate_vector.inl
        include/glm/gtx/scalar_multiplication.hpp
        include/glm/gtx/scalar_relational.hpp
        include/glm/gtx/scalar_relational.inl
        include/glm/gtx/simd_mat4.hpp
        include/glm/gtx/simd_mat4.inl
        include/glm/gtx/simd_quat.hpp
        include/glm/gtx/simd_quat.inl
        include/glm/gtx/simd_vec4.hpp
        include/glm/gtx/simd_vec4.inl
        include/glm/gtx/spline.hpp
        include/glm/gtx/spline.inl
        include/glm/gtx/std_based_type.hpp
        include/glm/gtx/std_based_type.inl
        include/glm/gtx/string_cast.hpp
        include/glm/gtx/string_cast.inl
        include/glm/gtx/transform.hpp
        include/glm/gtx/transform.inl
        include/glm/gtx/transform2.hpp
        include/glm/gtx/transform2.inl
        include/glm/gtx/type_aligned.hpp
        include/glm/gtx/type_aligned.inl
        include/glm/gtx/vector_angle.hpp
        include/glm/gtx/vector_angle.inl
        include/glm/gtx/vector_query.hpp
        include/glm/gtx/vector_query.inl
        include/glm/gtx/wrap.hpp
        include/glm/gtx/wrap.inl
        include/glm/common.hpp
        include/glm/exponential.hpp
        include/glm/ext.hpp
        include/glm/fwd.hpp
        include/glm/geometric.hpp
        include/glm/glm.hpp
        include/glm/integer.hpp
        include/glm/mat2x2.hpp
        include/glm/mat2x3.hpp
        include/glm/mat2x4.hpp
        include/glm/mat3x2.hpp
        include/glm/mat3x3.hpp
        include/glm/mat3x4.hpp
        include/glm/mat4x2.hpp
        include/glm/mat4x3.hpp
        include/glm/mat4x4.hpp
        include/glm/matrix.hpp
        include/glm/packing.hpp
        include/glm/trigonometric.hpp
        include/glm/vec2.hpp
        include/glm/vec3.hpp
        include/glm/vec4.hpp
        include/glm/vector_relational.hpp
        include/src/original/stb_image-1.09.c
        include/src/original/stb_image-1.16.c
        include/src/image_DXT.c
        include/src/image_DXT.h
        include/src/image_helper.c
        include/src/image_helper.h
        include/src/SOIL.c
        include/src/stb_image_aug.c
        include/src/stb_image_aug.h
        include/src/stbi_DDS_aug.h
        include/src/stbi_DDS_aug_c.h
        include/src/test_SOIL.cpp
        include/SOIL.h
        OpenGL/common/controls.cpp
        OpenGL/common/controls.hpp
        OpenGL/common/objloader.cpp
        OpenGL/common/objloader.hpp
        OpenGL/common/quaternion_utils.cpp
        OpenGL/common/quaternion_utils.hpp
        OpenGL/common/shader.cpp
        OpenGL/common/shader.hpp
        OpenGL/common/tangentspace.cpp
        OpenGL/common/tangentspace.hpp
        OpenGL/common/text2D.cpp
        OpenGL/common/text2D.hpp
        OpenGL/common/texture.cpp
        OpenGL/common/texture.hpp
        OpenGL/common/vboindexer.cpp
        OpenGL/common/vboindexer.hpp
        OpenGL/Game.cpp
        OpenGL/Game.h
        OpenGL/main.cpp
        OpenGL/ResourceManager.cpp
        OpenGL/ResourceManager.h
        OpenGL/shader.cpp
        OpenGL/shader.h
        OpenGL/texture.cpp
        OpenGL/texture.h
        soil/include/SOIL/image_dxt.h
        soil/include/SOIL/image_helper.h
        soil/include/SOIL/SOIL.h
        soil/include/SOIL/stb_image_aug.h
        soil/include/SOIL/stbi_dds_aug.h
        soil/include/SOIL/stbi_dds_aug_c.h
        soil/src/original/stb_image-1.09.c
        soil/src/original/stb_image-1.16.c
        soil/src/image_dxt.c
        soil/src/image_helper.c
        soil/src/soil.c
        soil/src/stb_image_aug.c)
